tests/baselines/reference/classAbstractMixedWithModifiers.errors.txt
classAbstractMixedWithModifiers.ts(6,13): error TS1243: 'private' modifier cannot be used with 'abstract' modifier.
classAbstractMixedWithModifiers.ts(8,14): error TS1029: 'public' modifier must precede 'abstract' modifier.
classAbstractMixedWithModifiers.ts(9,14): error TS1029: 'protected' modifier must precede 'abstract' modifier.
classAbstractMixedWithModifiers.ts(10,14): error TS1243: 'private' modifier cannot be used with 'abstract' modifier.
classAbstractMixedWithModifiers.ts(12,14): error TS1243: 'static' modifier cannot be used with 'abstract' modifier.
classAbstractMixedWithModifiers.ts(13,12): error TS1243: 'static' modifier cannot be used with 'abstract' modifier.
classAbstractMixedWithModifiers.ts(15,14): error TS1243: 'async' modifier cannot be used with 'abstract' modifier.
classAbstractMixedWithModifiers.ts(16,5): error TS1243: 'async' modifier cannot be used with 'abstract' modifier.


==== classAbstractMixedWithModifiers.ts (8 errors) ====
    abstract class A {
        abstract foo_a();
    
        public abstract foo_b();
        protected abstract foo_c();
        private abstract foo_d();
                ~~~~~~~~
!!! error TS1243: 'private' modifier cannot be used with 'abstract' modifier.
    
        abstract public foo_bb();
                 ~~~~~~
!!! error TS1029: 'public' modifier must precede 'abstract' modifier.
        abstract protected foo_cc();
                 ~~~~~~~~~
!!! error TS1029: 'protected' modifier must precede 'abstract' modifier.
        abstract private foo_dd();
                 ~~~~~~~
!!! error TS1243: 'private' modifier cannot be used with 'abstract' modifier.
    
        abstract static foo_d();
                 ~~~~~~
!!! error TS1243: 'static' modifier cannot be used with 'abstract' modifier.
        static abstract foo_e();
               ~~~~~~~~
!!! error TS1243: 'static' modifier cannot be used with 'abstract' modifier.
    
        abstract async foo_f();
                 ~~~~~
!!! error TS1243: 'async' modifier cannot be used with 'abstract' modifier.
        async abstract foo_g();
        ~~~~~
!!! error TS1243: 'async' modifier cannot be used with 'abstract' modifier.
    }
    